fixed: no content visible when height not fixed

--- a/src/changelog.scss
+++ b/src/changelog.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   .changelog-text {
-    flex: 1 1 0;
     overflow: auto;
     white-space: pre;
   }
